--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -1,5 +1,9 @@
 Classroom Info
 <p>
-<%= @classroom.course_name %>
-<%= @classroom.semester %>
+<%= render partial: 'classroom', locals: {classroom: @classroom} %>
 </p>
+
+
+<% @classroom.students.each do |student| %>
+    <%= render partial: 'students/student', locals: {student: student} %>
+<% end %>
